# RayTracer

./: .gitignore  CMakeLists.txt  build.sh  spxe.h
Sources/: main.cpp
